<resources>
    <string name="app_name">Abank-Gov</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_for_gov">For Government</string>
    <!--Navigation Menu String-->
    <string name="nav_notifications">Notifications</string>
    <string name="nav_message">Message</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_trash">Delete All</string>
    <string name="nav_photo">Profile Picture</string>
    <string name="nav_email">Change Email</string>
    <string name="nav_pass">Change Password</string>
    <!--Text Message-->
    <string name="text_empty">This field is Empty</string>
    <string name="text_invalid_email">Invalid Email Address</string>
    <string name="text_failed_login">Failed Login Your Account</string>
    <string name="text_success_login">Welcome Admin</string>
    <string name="text_success_reset">Please Check Your Email Inbox</string>
    <string name="text_failed_reset">Failed to Reset Password</string>
    <string name="text_message_log_out">Are You Sure To Log Out Your Account?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_permissions_not_granted">Permissions Not Granted By User</string>
    <string name="text_notifications">Delete All Notifications?</string>
    <!--Auth Fragment String-->
    <string name="til_email_address">Email Address</string>
    <string name="tv_forgot">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="til_pass">Password</string>
    <string name="tv_info_forgot">Insert Your Email Address to Reset Your Password</string>
    <string name="btn_reset">Reset Password</string>
    <string name="title_activity_main">Map</string>
    <!--Main Fragment String-->
    <string name="fab_add_iot">Add IoT</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <!--Edit Profile Fragment-->
    <string name="til_id">ID Card Number</string>
    <string name="til_name">Full Name</string>
    <string name="til_phone">Phone Number</string>
    <string name="btn_change_data">Change Data</string>
</resources>